--- a/test_r_2.ipynb
+++ b/test_r_2.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook is running with R kernel. It uses standard R language (Version `2018-07-02`, `Feather Spray`) (https://cran.r-project.org)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,16 +104,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    Period            Region  Revenue..USD.     \n",
+       " FY2015:6   Africa       :2   Min.   :8.00e+06  \n",
+       " FY2016:6   Asia         :2   1st Qu.:1.90e+07  \n",
+       "            Australia    :2   Median :5.80e+07  \n",
+       "            Europe       :2   Mean   :6.45e+07  \n",
+       "            North America:2   3rd Qu.:1.02e+08  \n",
+       "            South America:2   Max.   :1.50e+08  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "air"
+    "summary(airline_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,64 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>Period</th><th scope=col>Region</th><th scope=col>Revenue..USD.</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>FY2015   </td><td>Africa   </td><td> 15000000</td></tr>\n",
-       "\t<tr><td>FY2015   </td><td>Asia     </td><td>100000000</td></tr>\n",
-       "\t<tr><td>FY2015   </td><td>Australia</td><td> 50000000</td></tr>\n",
-       "\t<tr><td>FY2015   </td><td>Europe   </td><td> 40000000</td></tr>\n",
-       "\t<tr><td>FY2016   </td><td>Africa   </td><td> 10500000</td></tr>\n",
-       "\t<tr><td>FY2016   </td><td>Asia     </td><td> 70000000</td></tr>\n",
-       "\t<tr><td>FY2016   </td><td>Australia</td><td> 35000000</td></tr>\n",
-       "\t<tr><td>FY2016   </td><td>Europe   </td><td> 28000000</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lll}\n",
-       " Period & Region & Revenue..USD.\\\\\n",
-       "\\hline\n",
-       "\t FY2015    & Africa    &  15000000\\\\\n",
-       "\t FY2015    & Asia      & 100000000\\\\\n",
-       "\t FY2015    & Australia &  50000000\\\\\n",
-       "\t FY2015    & Europe    &  40000000\\\\\n",
-       "\t FY2016    & Africa    &  10500000\\\\\n",
-       "\t FY2016    & Asia      &  70000000\\\\\n",
-       "\t FY2016    & Australia &  35000000\\\\\n",
-       "\t FY2016    & Europe    &  28000000\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| Period | Region | Revenue..USD. |\n",
-       "|---|---|---|\n",
-       "| FY2015    | Africa    |  15000000 |\n",
-       "| FY2015    | Asia      | 100000000 |\n",
-       "| FY2015    | Australia |  50000000 |\n",
-       "| FY2015    | Europe    |  40000000 |\n",
-       "| FY2016    | Africa    |  10500000 |\n",
-       "| FY2016    | Asia      |  70000000 |\n",
-       "| FY2016    | Australia |  35000000 |\n",
-       "| FY2016    | Europe    |  28000000 |\n",
-       "\n"
-      ],
       "text/plain": [
-       "  Period Region    Revenue..USD.\n",
-       "1 FY2015 Africa     15000000    \n",
-       "2 FY2015 Asia      100000000    \n",
-       "3 FY2015 Australia  50000000    \n",
-       "4 FY2015 Europe     40000000    \n",
-       "5 FY2016 Africa     10500000    \n",
-       "6 FY2016 Asia       70000000    \n",
-       "7 FY2016 Australia  35000000    \n",
-       "8 FY2016 Europe     28000000    "
+       "    Period        Region  Revenue..USD.      \n",
+       " FY2015:4   Africa   :2   Min.   : 10500000  \n",
+       " FY2016:4   Asia     :2   1st Qu.: 24750000  \n",
+       "            Australia:2   Median : 37500000  \n",
+       "            Europe   :2   Mean   : 43562500  \n",
+       "                          3rd Qu.: 55000000  \n",
+       "                          Max.   :100000000  "
       ]
      },
      "metadata": {},
@@ -180,7 +158,7 @@
     }
    ],
    "source": [
-    "airline_2"
+    "summary(airline_2)"
    ]
   },
   {
